Display line breaks in email preview - fixes #79

--- a/react-app/src/App.scss
+++ b/react-app/src/App.scss
@@ -76,6 +76,7 @@ p.explanation {
     border: 1px solid grey;
     margin: 15px 0;
     padding: 20px;
+    white-space: pre-wrap;
   }
   button {
     margin: auto;
